--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="one">
             <div>
                 <p>Computer's choice:</p>
+                <div id="countdown"></div>
                 <img id="computer-choice-image" src="images/CHOICE1.png" alt="Computer's choice" class="output-image" />
             </div>
             <div>
